# ProductionAnalysis

./: CMakeLists.txt  README.md
include/: DBAP.hpp  FileManager.hpp  Project.hpp  ProjectData.hpp
include/gui/: ExpenseCreationWindow.hpp  ExpenseEditWindow.hpp  ExpenseTypeCreationWindow.hpp  ExpenseTypeEditWindow.hpp  ExpenseTypesWindow.hpp  ExpensesTableWindow.hpp  MainWindow.hpp  ReportWindow.hpp  SubWindow.hpp
include/model/: CreationModel.hpp  ExpensesTableModel.hpp
include/view/: ExpensesTableWindow.hpp  MainWindow.hpp  NewExpenseWindow.hpp
src/: DBAP.cpp  FileManager.cpp  Project.cpp  ProjectData.cpp  main.cpp
src/gui/: ExpenseCreationWindow.cpp  ExpenseEditWindow.cpp  ExpenseTypeCreationWindow.cpp  ExpenseTypeEditWindow.cpp  ExpenseTypesWindow.cpp  ExpensesTableWindow.cpp  MainWindow.cpp  ReportWindow.cpp
src/model/: CreationModel.cpp  ExpensesTableModel.cpp
src/view/: ExpensesTableWindow.cpp  MainWindow.cpp  NewExpenseWindow.cpp
translations/: ProductionAnalysis_en_US.ts  ProductionAnalysis_ru_RU.ts
